--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ repository               : "rhansda1/rhansda1.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
+  avatar           : "profile.jpg"
   name             : "Rasamoy Hansda"
   pronouns         : # example: "she/her"  
   bio              : "Assistant professor of Physical Education"
