--- a/_data/publications_html.yaml
+++ b/_data/publications_html.yaml
@@ -1,3 +1,16 @@
+Hansda:2019:
+  year: '2019'
+  pages: '1540-1545'
+  number: '1'
+  volume: '4'
+  journal: International Journal of Physiology, Nutrition and Physical Education
+  doi: 
+  primaryclass: 
+  archiveprefix: 
+  eprint: 
+  title: A comparative study on selected physical and psychosocial profile of Santal boys
+  author: <u>Rasamoy Hansda</u> & Dr. Kanchan Bandopadhyay
+
 Hansda:2018:
   year: '2018'
   pages: '1027-1030'
