--- a/_data/publications_html.yaml
+++ b/_data/publications_html.yaml
@@ -1,3 +1,16 @@
+Hansda:2020:
+  year: '2020, March'
+  pages: ' '
+  number: '1'
+  volume: '9'
+  journal: International Journal of Movement Education and Social Science
+  doi: 
+  primaryclass: 
+  archiveprefix: 
+  eprint: 
+  title: A Study on Selected Anthropometric Characteristics and Physical Fitness of Santal Boys
+  author: <u>Dr. Rasamoy Hansda</u> & Dr. Kanchan Bandopadhyay
+
 Hansda:2019:
   year: '2019'
   pages: '1540-1545'
