--- a/_data/publications_html.yaml
+++ b/_data/publications_html.yaml
@@ -1,3 +1,16 @@
+Hansda:2021:
+  year: '2021, June'
+  pages: '59-64'
+  number: ''
+  volume: ''
+  journal: International E-Conference on Innovation and Practices of Modern Sports Science and Traditional Yoga (Proceeding Book)
+  doi: 
+  primaryclass: 
+  archiveprefix: 
+  eprint: 
+  title: A Comparative Study on Attitude of Physical Education Teachers Towards Teaching Profession
+  author: <u>Dr. Rasamoy Hansda
+
 Hansda:2020:
   year: '2020, March'
   pages: ' '
