--- a/_data/publications_html.yaml
+++ b/_data/publications_html.yaml
@@ -1,4 +1,17 @@
 Hansda:2021:
+  year: '2021, August'
+  pages: '82-87'
+  number: ''
+  volume: ''
+  journal: Vidyabharati International Interdisciplinary Research Journal (Special Issue)
+  doi: 
+  primaryclass: 
+  archiveprefix: 
+  eprint: 
+  title: A Study on Occupational Stress of Physical Educational Teachers Serving at Government Sponsored Schools in  Medinipur Administrative Zone
+  author: <u>Dr. Rasamoy Hansda
+  
+Hansda:2021:
   year: '2021, June'
   pages: '59-64'
   number: ''
