--- a/_data/publications_html.yaml
+++ b/_data/publications_html.yaml
@@ -1,4 +1,4 @@
-Hansda:2021:
+Hansda:2021B:
   year: '2021, August'
   pages: '82-87'
   number: ''
@@ -9,9 +9,9 @@ Hansda:2021:
   archiveprefix: 
   eprint: 
   title: A Study on Occupational Stress of Physical Educational Teachers Serving at Government Sponsored Schools in  Medinipur Administrative Zone
-  author: <u>Dr. Rasamoy Hansda
+  author: <u>Dr. Rasamoy Hansda</u>
   
-Hansda:2021:
+Hansda:2021A:
   year: '2021, June'
   pages: '59-64'
   number: ''
@@ -22,7 +22,7 @@ Hansda:2021:
   archiveprefix: 
   eprint: 
   title: A Comparative Study on Attitude of Physical Education Teachers Towards Teaching Profession
-  author: <u>Dr. Rasamoy Hansda
+  author: <u>Dr. Rasamoy Hansda</u>
 
 Hansda:2020:
   year: '2020, March'
