--- a/_data/publications_html.yaml
+++ b/_data/publications_html.yaml
@@ -1,3 +1,16 @@
+Hansda:2021C:
+  year: '2021'
+  pages: '540-545'
+  number: 'ix'
+  volume: '36'
+  journal: Kalyan Bharati (Journal on Indian History & Culture)
+  doi: 
+  primaryclass: 
+  archiveprefix: 
+  eprint: 
+  title: A Comparative Study on Selected Motor Fitness Variables between Tribal and Non-Tribal School Boys
+  author: <u>Dr. Rasamoy Hansda</u>
+  
 Hansda:2021B:
   year: '2021, August'
   pages: '82-87'
