--- a/_data/publications_html.yaml
+++ b/_data/publications_html.yaml
@@ -1,9 +1,22 @@
+Hansda:2021D:
+  year: '2021'
+  pages: '188-194'
+  number: '1'
+  volume: 'xxii'
+  journal: Journal of Education : Rabindra Bharati University 
+  doi: 
+  primaryclass: 
+  archiveprefix: 
+  eprint: 
+  title: A Comparative Study on Creativity of Playing Adolescent between Tribal and Non-Tribal School Boys
+  author: <u>Dr. Rasamoy Hansda</u>
+  
 Hansda:2021C:
   year: '2021'
   pages: '540-545'
   number: 'ix'
   volume: '36'
-  journal: Kalyan Bharati (Journal on Indian History & Culture)
+  journal: Kalyan Bharati : Journal on Indian History & Culture
   doi: 
   primaryclass: 
   archiveprefix: 
