--- a/_data/publications_html.yaml
+++ b/_data/publications_html.yaml
@@ -16,7 +16,7 @@ Hansda:2021C:
   pages: '540-545'
   number: 'ix'
   volume: '36'
-  journal: Kalyan Bharati: Journal on Indian History & Culture
+  journal: Kalyan Bharati (Journal on Indian History & Culture)
   doi: 
   primaryclass: 
   archiveprefix: 
