--- a/_data/publications_html.yaml
+++ b/_data/publications_html.yaml
@@ -3,7 +3,7 @@ Hansda:2021D:
   pages: '188-194'
   number: '1'
   volume: 'xxii'
-  journal: Journal of Education: Rabindra Bharati University 
+  journal: Journal of Education - Rabindra Bharati University 
   doi: 
   primaryclass: 
   archiveprefix: 
