--- a/_data/publications_html.yaml
+++ b/_data/publications_html.yaml
@@ -1,3 +1,16 @@
+Hansda:2021E:
+  year: '2021'
+  pages: '140-146'
+  number: '4'
+  volume: '24'
+  journal: Kala Sarovar
+  doi: 
+  primaryclass: 
+  archiveprefix: 
+  eprint: 
+  title: A Comparative Study on Job Satisfaction and Attitudinal Difference of Physical Education Teachers
+  author: <u>Dr. Rasamoy Hansda</u>
+  
 Hansda:2021D:
   year: '2021'
   pages: '188-194'
