--- a/_data/publications_html.yaml
+++ b/_data/publications_html.yaml
@@ -1,3 +1,16 @@
+Hansda:2023:
+  year: '2023, September'
+  pages: '10'
+  number: ''
+  volume: ''
+  journal: International Conference on Inclusive Growth through Multidisciplinary Research (ICIGMR – 2023)
+  doi: 
+  primaryclass: 
+  archiveprefix: 
+  eprint: 
+  title: Temperament Ability of School Going Tribal Boys in Games and Sports
+  author: <u>Dr. Rasamoy Hansda</u>, Dr. Suman Panda, Dr. Rudranath Chatterjee & Dr. Kanchan Bandopadhyay
+  
 Hansda:2021E:
   year: '2021'
   pages: '140-146'
