--- a/_data/publications_html.yaml
+++ b/_data/publications_html.yaml
@@ -1,3 +1,4 @@
+
 Hansda:2023:
   year: '2023, September'
   pages: '10'
@@ -24,17 +25,17 @@ Hansda:2021E:
   title: A Comparative Study on Job Satisfaction and Attitudinal Difference of Physical Education Teachers
   author: <u>Dr. Rasamoy Hansda</u>
   
-Hansda:2021D:
-  year: '2021'
-  pages: '188-194'
+Hansda:2024:
+  year: '2024'
+  pages: '56-59'
   number: '1'
-  volume: 'xxii'
-  journal: Journal of Education - Rabindra Bharati University 
+  volume: 'I'
+  journal: Piri - A contemporary Half-Yearly Santali Literary Journal 
   doi: 
   primaryclass: 
   archiveprefix: 
   eprint: 
-  title: A Comparative Study on Creativity of Playing Adolescent between Tribal and Non-Tribal School Boys
+  title: Sikrih Jalare Manmi Jiyon
   author: <u>Dr. Rasamoy Hansda</u>
   
 Hansda:2021C:
