--- a/_data/publications_html.yaml
+++ b/_data/publications_html.yaml
@@ -1,5 +1,17 @@
-
-Hansda:2023:
+Hansda:2024:
+  year: '2024'
+  pages: '56-59'
+  number: '1'
+  volume: '1'
+  journal: Piri: A Contemporary Half-Yearly Santali Litarary Journal
+  doi: 
+  primaryclass: 
+  archiveprefix: 
+  eprint: 
+  title: Sikrih Jalare Manmi Jiyon
+  author: <u>Dr. Rasamoy Hansda</u>
+  
+  Hansda:2023:
   year: '2023, September'
   pages: '10'
   number: ''
