--- a/_data/publications_html.yaml
+++ b/_data/publications_html.yaml
@@ -37,17 +37,17 @@ Hansda:2021E:
   title: A Comparative Study on Job Satisfaction and Attitudinal Difference of Physical Education Teachers
   author: <u>Dr. Rasamoy Hansda</u>
   
-Hansda:2024:
-  year: '2024'
-  pages: '56-59'
-  number: '1'
-  volume: 'I'
-  journal: Piri - A contemporary Half-Yearly Santali Literary Journal 
+Hansda:2021D:
+  year: '2021'
+  pages: '82-87'
+  number: ''
+  volume: ''
+  journal: Vidyabharti International Interdisciplinary Research Journal 
   doi: 
   primaryclass: 
   archiveprefix: 
   eprint: 
-  title: Sikrih Jalare Manmi Jiyon
+  title: A Study on Occupational Stress of Physical Educational Teachers Serving at Govornment Sponsored Schools at Medinipur Administrative Zone
   author: <u>Dr. Rasamoy Hansda</u>
   
 Hansda:2021C:
