--- a/_data/publications_html.yaml
+++ b/_data/publications_html.yaml
@@ -39,15 +39,15 @@ Hansda:2021E:
   
 Hansda:2021D:
   year: '2021'
-  pages: '82-87'
-  number: ''
-  volume: ''
-  journal: Vidyabharti International Interdisciplinary Research Journal 
+  pages: '188-194'
+  number: '1'
+  volume: 'XXII'
+  journal: Journal of Education - Rabindra Bharati University
   doi: 
   primaryclass: 
   archiveprefix: 
   eprint: 
-  title: A Study on Occupational Stress of Physical Educational Teachers Serving at Govornment Sponsored Schools at Medinipur Administrative Zone
+  title: A Comparative Study on Creativity of Playing Adolescent Between Tribal and Non-Tribal Boys
   author: <u>Dr. Rasamoy Hansda</u>
   
 Hansda:2021C:
