--- a/_data/publications_html.yaml
+++ b/_data/publications_html.yaml
@@ -3,7 +3,7 @@ Hansda:2024:
   pages: '56-59'
   number: '1'
   volume: '1'
-  journal: Piri (A Contemporary Half-Yearly Santali Litarary Journal)
+  journal: 'Piri - A Contemporary Half-Yearly Santali Litarary Journal'
   doi: 
   primaryclass: 
   archiveprefix: 
