--- a/_data/publications_html.yaml
+++ b/_data/publications_html.yaml
@@ -1,3 +1,16 @@
+Hansda:2025:
+  year: '2025, February'
+  pages: '190-196'
+  number: ''
+  volume: '9'
+  journal: Indian Journal of Yoga & Sports Science and Physical Education
+  doi: https://doi.org/10.58914/ijyesspe.2024-9.Spl.31
+  primaryclass: 
+  archiveprefix: 
+  eprint: 
+  title: Adjustment Ability of Tribal Boys - An Analysis
+  author: <u>Dr. Rasamoy Hansda</u>
+
 Hansda:2024:
   year: '2024, December'
   pages: '56-59'
