--- a/_data/publications_html.yaml
+++ b/_data/publications_html.yaml
@@ -1,3 +1,16 @@
+Hansda:2025B:
+  year: '2025, January - June'
+  pages: '55-58'
+  number: '1'
+  volume: '2'
+  journal: Piri - A Contemporary Half-Yearly Santali Litarary Journal
+  doi: 
+  primaryclass: 
+  archiveprefix: 
+  eprint: 
+  title: Santal at football match management: A report from Junglemahal
+  author: <u>Dr. Rasamoy Hansda</u>
+  
 Hansda:2025:
   year: '2025, February'
   pages: '190-196'
