--- a/_data/publications_html.yaml
+++ b/_data/publications_html.yaml
@@ -8,7 +8,7 @@ Hansda:2025B:
   primaryclass: 
   archiveprefix: 
   eprint: 
-  title: Santal at football match management: A report from Junglemahal
+  title: "Santal at football match management: A report from Junglemahal"
   author: <u>Dr. Rasamoy Hansda</u>
   
 Hansda:2025:
