--- a/_data/publications_html.yaml
+++ b/_data/publications_html.yaml
@@ -11,7 +11,7 @@ Hansda:2025B:
   title: "Santal at football match management: A report from Junglemahal"
   author: <u>Dr. Rasamoy Hansda</u>
   
-Hansda:2025:
+Hansda:2025A:
   year: '2025, February'
   pages: '190-196'
   number: ''
